<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayoutRammi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.85">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewClassic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/textViewClassic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:text="@string/classic" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewJazz"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textViewJazz"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:text="@string/jazz" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewFolkore"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/textViewFolklore"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:text="@string/folklore" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewWorldmusic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textViewWorldmusic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:text="@string/worldmusic" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewBlues"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/textViewRap"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:text="@string/blues" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewAccordion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/textViewAccordion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:text="@string/accordion" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                </LinearLayout>


            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="0.15"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonEscape"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                app:srcCompat="@drawable/gnome_panel_force_quit_36" />

            <ImageButton
                android:id="@+id/imageButtonLeftArrow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                app:srcCompat="@drawable/left3green_164x_36y_" />

        </LinearLayout>

        <include layout="@layout/footerbar"></include>

    </LinearLayout>


    </android.support.constraint.ConstraintLayout>